# gltf_revit

./: .gitignore  README.md  business.md  development.md
.claude/: settings.local.json
AutoCadGltfExporter/: AutoCadGltfExporter.sln
AutoCadGltfExporter/AutoCadGltfExporter/: Application.cs  AutoCadGltfExporter.csproj
AutoCadGltfExporter/AutoCadGltfExporter/Bundle/: PackageContents.xml
AutoCadGltfExporter/AutoCadGltfExporter/Commands/: ExportGlbCommand.cs
AutoCadGltfExporter/AutoCadGltfExporter/Export/: BlockRefHandler.cs  CurveSampler.cs  DwgExportContext.cs  DwgPropertyCollector.cs  DwgUnitConverter.cs  SolidTessellator.cs  TextExploder.cs
AutoCadGltfExporter/AutoCadGltfExporter/Properties/: AssemblyInfo.cs
AutoCadGltfExporter/AutoCadGltfExporter/UI/: ExportOptionsWindow.xaml  ExportOptionsWindow.xaml.cs
RevitGltfExporter/: RevitGltfExporter.sln
RevitGltfExporter/RevitGltfExporter/: Application.cs  RevitGltfExporter.csproj
RevitGltfExporter/RevitGltfExporter/Commands/: ExportGlbCommand.cs
RevitGltfExporter/RevitGltfExporter/Export/: DracoNative.cs  GlbExportContext.cs  GltfBuilder.cs  GltfSchema.cs  MaterialCollector.cs  PropertyCollector.cs
RevitGltfExporter/RevitGltfExporter/Properties/: AssemblyInfo.cs
RevitGltfExporter/RevitGltfExporter/Resources/: RevitGltfExporter.addin
RevitGltfExporter/RevitGltfExporter/UI/: ExportOptions.cs  (+2 more)
Shared/: DracoNative.cs  ExportOptions.cs  GltfBuilder.cs  GltfSchema.cs  LineBuilder.cs  MaterialBuilder.cs  Shared.csproj
Shared/Properties/: AssemblyInfo.cs
docs/: autocad-glb-export-implementation.md  performance-optimization.md  revit-glb-export-implementation.md
draco_encoder_wrapper/: CMakeLists.txt  build.ps1  draco_encoder_c.cc  draco_encoder_c.h
scripts/: install-plugins.ps1
web-viewer/: index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
web-viewer/src/: App.tsx  index.css  store.ts
(+8 files in other folders)
